2022-11-25T00:28:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544413422 # 653
* notice: last 14d: unq all: 7 5792
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 88573 / 1254 94301
* notice: next accum: outdated-unq outdated-all / unq all: 1223 88983 / 1254 94775
* notice: prev exec diff / last date diff / accum: unq all: +0 +152 -0 -21 / +2 +417 -0 -0 / 2 417
* notice: removed / changed dates: [2022-11-10] / [2022-11-11 2022-11-24]

2022-11-24T16:03:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3542128609 # 652
* notice: last 14d: unq all: 7 5728
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 88573 / 1254 94324
* notice: next accum: outdated-unq outdated-all / unq all: 1222 88573 / 1254 94301
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -145 / +2 +265 -0 -0 / 2 265
* notice: removed / changed dates: [] / [2022-11-10 2022-11-24]

2022-11-24T08:07:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3538776308 # 651
* notice: last 14d: unq all: 7 5751
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 88573 / 1252 94355
* notice: next accum: outdated-unq outdated-all / unq all: 1222 88573 / 1254 94324
* notice: prev exec diff / last date diff / accum: unq all: +2 +145 -0 -176 / +2 +143 -0 -0 / 2 143
* notice: removed / changed dates: [] / [2022-11-10 2022-11-23 2022-11-24]

2022-11-24T00:31:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3536696453 # 650
* notice: last 14d: unq all: 7 5782
* notice: prev accum: outdated-unq outdated-all / unq all: 1221 88164 / 1252 93886
* notice: next accum: outdated-unq outdated-all / unq all: 1222 88573 / 1252 94355
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -22 / +2 +414 -0 -0 / 2 414