@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-11-25T08:07:05Z",
+  "count" : 143,
+  "count_minmax" : [ 143, 143 ],
+  "count_decinc" : [ -0, +143 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
