@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-25T00:28:49Z",
+  "timestamp" : "2022-11-25T08:07:05Z",
   "count_outdated" : 88983,
   "uniques_outdated" : 1223,
-  "count" : 94775,
-  "uniques" : 1254,
+  "count" : 94741,
+  "uniques" : 1255,
   "clones" : [
     {
       "timestamp": "2022-11-11T00:00:00Z",
-      "count": 392,
+      "count": 215,
       "count_minmax": [ 140, 413 ],
-      "uniques": 4,
+      "uniques": 3,
       "uniques_minmax": [ 2, 4 ]
     },
     {
@@ -100,6 +100,13 @@
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 417,
       "count_minmax": [ 143, 417 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-11-25T00:00:00Z",
+      "count": 143,
+      "count_minmax": [ 143, 143 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
