@@ -1,3 +1,11 @@
+2022-11-25T08:07:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3546304332 # 654
+* notice: last 14d: unq all: 6 5758
+* notice: prev accum: outdated-unq outdated-all / unq all: 1223 88983 / 1254 94775
+* notice: next accum: outdated-unq outdated-all / unq all: 1223 88983 / 1255 94741
+* notice: prev exec diff / last date diff / accum: unq all: +2 +143 -1 -177 / +2 +143 -0 -0 / 2 143
+* notice: removed / changed dates: [] / [2022-11-11 2022-11-25]
+
 2022-11-25T00:28:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544413422 # 653
 * notice: last 14d: unq all: 7 5792
